crates/figue/tests/integration/snapshots/main__integration__subcommand_errors__nested_subcommand_not_provided_with_builtins.snap
---
source: crates/figue/tests/integration/subcommand_errors.rs
assertion_line: 526
expression: "strip_ansi_escapes :: strip_str(& err.to_string())"
---
main repo

Repository operations

USAGE:
    main repo [OPTIONS] <COMMAND>

OPTIONS:
    -h, --help
            Show help message and exit.
        --html-help
            Open HTML help in the browser and exit.
    -V, --version
            Show version and exit.
        --completions <bash,zsh,fish>
            Generate shell completions.
        --export-jsonschemas <DIR>
            Export JSON Schema files for all config roots.

COMMANDS:
    clone
            Clone a repository
    push
            Push changes
    pull
            Pull changes
