crates/figue/tests/integration/snapshots/main__integration__subcommand_errors__no_subcommand_provided.snap
---
source: crates/figue/tests/integration/subcommand_errors.rs
assertion_line: 373
expression: "strip_ansi_escapes :: strip_str(& err.to_string())"
---
main

USAGE:
    main [OPTIONS] <COMMAND>

OPTIONS:
    -h, --help
            Show help message and exit.
        --html-help
            Open HTML help in the browser and exit.
    -V, --version
            Show version and exit.
        --completions <bash,zsh,fish>
            Generate shell completions.
        --export-jsonschemas <DIR>
            Export JSON Schema files for all config roots.

COMMANDS:
    init
    build
